# curllm

./: .gitignore  CHANGELOG.md  README.md  goal.yaml  migration_plan.md  projektor.yaml  pyproject.toml  pyqual.yaml
.planfile/: config.yaml
.planfile/sprints/: current.yaml
.projektor/: state.json
.projektor/tickets/: CURL-1.json
curllm_core/: dynamic_container_detector.py  form_fill.py  intent_detector.py  llm_heuristics.py  multi_criteria_filter.py  orchestrator_steps.py  proxy.py  server.py  vision_form_analysis.py
curllm_core/execution/executor/: curllm_executor.py
curllm_core/extraction/: extractor.py
curllm_core/orchestration/orchestrator/: orchestrator.py  orchestrator_config.py
curllm_core/running/: runner.py
curllm_logs/: __init__.py
curllm_mcp/: __init__.py  server.py  service.py  testql_export.py
curlx_pkg/: pyproject.toml
docs/: LLM_DSL_ARCHITECTURE.md  MCP.md  README.md
docs/v2/api/: API.md
examples/: mcp-cursor.json
forms/: __init__.py
pricing/: __init__.py
pricing/tests/: test_pricing.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
scripts/: dev_watcher.py  start-mcp.sh
tests/: test_curllm_mcp.py  test_health.py  test_testql_export.py  test_v2_imports.py
