[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curlx"
version = "0.1.0"
description = "curlx: Proxy manager companion for curllm (register, spawn, list)"
readme = "README.md"
authors = [ { name = "Tom Sapletta" } ]
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["proxy", "automation", "curllm", "ssh"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Topic :: Internet :: Proxy Servers",
]
dependencies = [
  "requests",
]

[project.urls]
Homepage = "https://github.com/wronai/curllm"
Issues = "https://github.com/wronai/curllm/issues"

[project.scripts]
curlx = "curlx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
